# mdbook-selfpath

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: cicd.yml  release.yml
ci/: make-release-assets.sh
src/: lib.rs  main.rs
testbook/: book.toml
testbook/expected/: chapter1_index.html  index.html  intro.html
testbook/src/: Intro.md  SUMMARY.md  intro.md
testbook/src/chapter1/: index.md
